--- a/DBfirstApproach/Views/Home/Index.cshtml
+++ b/DBfirstApproach/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="AddProduct">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="EditProduct" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="ReadProduct" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="DeleteProduct" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
